--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mint-nft",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://harsh-shri.github.ioMint_nft.git",
+  "homepage":"https://harsh-shri.github.io/Mint_nft.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
